--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,22 @@
   </head>
 
   <body>
-    <%= yield %>
+    <nav class="navbar navbar-expand navbar-dark bg-dark fixed-top">
+      <%= link_to "gittest todo", "#", id: "logo", class: "navbar-brand" %>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <%= link_to "TODOindex", todos_path , class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "TODOnew", new_todo_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Contents", "#", class: "nav-link" %>
+        </li>
+      </ul>
+    </nav>
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
