--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Todos</h1>
-<table>
+<strong><p class="h1">INDEX</p></strong>
+<table class="table table-striped" style="white-space: nowrap">
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Status</th>
-      <th>Estimateddate</th>
+      <th>タイトル</th>
+      <th>説明</th>
+      <th>ステータス</th>
+      <th>時刻</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -19,14 +19,13 @@
         <td><%= todo.description %></td>
         <td><%= todo.status %></td>
         <td><%= todo.estimatedDate %></td>
-        <td><%= link_to 'Show', todo %></td>
-        <td><%= link_to 'Edit', edit_todo_path(todo) %></td>
-        <td><%= link_to 'Destroy', todo, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to '詳細', todo %></td>
+        <td><%= link_to '編集', edit_todo_path(todo) %></td>
+        <td><%= link_to '削除', todo, method: :delete, data: { confirm: '削除してもよろしいですか？' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Todo', new_todo_path %>
+<%= link_to '新規登録', new_todo_path , :class=>'btn btn-primary'%>
