--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -1,31 +1,84 @@
 <p id="notice"><%= notice %></p>
+<strong><p class="h1">rails test github</p></strong>
+<div class="container">
+  <div class="row">
+    <%= render :partial => "layouts/header"  %>
+  </div>
+  <%#= form_with(model: todo, local: true) do |form| %>
+  <%#= form_for(@todo) do |form|%>
+  <%= form_with model: @todo, local: true do |form|%>
+  <!-- form_withでは何も指定しない場合デフォルトでremote: true -->
+    <div class="row">
+      <!-- createに失敗するとエラー表示 -->
+      <% if @todo.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@todo.errors.count, "error") %> prohibited this todo from being saved:</h2>
 
-<strong><p class="h1">INDEX</p></strong>
-<table class="table table-striped" style="white-space: nowrap">
-  <thead>
-    <tr>
-      <th>タイトル</th>
-      <th>説明</th>
-      <th>ステータス</th>
-      <th>時刻</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+          <ul>
+          <% @todo.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+          </ul>
+        </div>
+      <% end %>
+    </div>
 
-  <tbody>
-    <% @todos.each do |todo| %>
-      <tr>
-        <td><%= todo.title %></td>
-        <td><%= todo.description %></td>
-        <td><%= todo.status %></td>
-        <td><%= todo.estimatedDate %></td>
-        <td><%= link_to '詳細', todo %></td>
-        <td><%= link_to '編集', edit_todo_path(todo) %></td>
-        <td><%= link_to '削除', todo, method: :delete, data: { confirm: '削除してもよろしいですか？' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+    <div class="row">
+      <div class="col">
+        <div class="field">
+          <%= form.label :title , "タイトル", class:'control-label' %>
+          <%= form.text_field :title , class: 'form-control', :size=>"25" %>
+        </div>
 
+        <div class="field">
+          <%= form.label :description , "説明", class:'control-label' %>
+          <%= form.text_area :description ,:class => 'form-control' ,:size => "40" ,autocomplete: 'off' %>
+        </div>
+
+        <div class="field">
+          <%= form.label :status , "ステータス", class:'control-label' %>
+          <%= form.number_field :status , class: 'form-control', :size=>"25" %>
+        </div>
+
+        <div class="field">
+          <%= form.label :estimatedDate , "時刻", class:'control-label' %><br/>
+          <%= form.time_select :estimatedDate ,{ :minute_step => 5, :time_separator => "" ,default: Date.today }, { class: "form-control time-select mb-3 bootstrap-date" } %>
+        </div>
+
+        <div class="actions">
+          <%= form.submit('保存',class: 'btn btn-primary btn-lg my-1 mb-3 px-3') %>
+        </div>
+      </div>
+    </div>
+  <% end %>
+
+  <div class="row">
+    <table class="table table-striped" style="white-space: nowrap">
+      <thead>
+        <tr>
+          <th>タイトル</th>
+          <th>説明</th>
+          <th>ステータス</th>
+          <th>時刻</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <% @todos.each do |todo| %>
+          <tr>
+            <td><%= todo.title %></td>
+            <td><%= todo.description %></td>
+            <td><%= todo.status %></td>
+            <td><%= todo.estimatedDate %></td>
+            <td><%= link_to '詳細', todo %></td>
+            <td><%= link_to '編集', edit_todo_path(todo) %></td>
+            <td><%= link_to '削除', todo, method: :delete, data: { confirm: '削除してもよろしいですか？' } %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
 <br>
-<%= link_to '新規登録', new_todo_path , :class=>'btn btn-primary'%>
+<%#= link_to '新規登録', new_todo_path , :class=>'btn btn-primary'%>
