--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,7 +43,26 @@
         padding-top: 70px;
     }
 
-    div.field_with_errors {
-        background-color: #fcc;
-        padding: 2px;
+    // div.field_with_errors {
+    //     background-color: #fcc;
+    //     padding: 2px;
+    // }
+
+    .field_with_errors {
+        input {
+            @extend .is-invalid;
+            }
+        }
+
+    .form-group {
+        .field_with_errors {
+        label {
+            font-size: 20px;
+            font-weight: 500;
+        }
+
+        input {
+            height: 50px;
+        }
+        }
     }
