--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -60,6 +60,7 @@
           <th>説明</th>
           <th>ステータス</th>
           <th>時刻</th>
+          <th>UPDATE</th>
           <th colspan="3"></th>
         </tr>
       </thead>
@@ -71,6 +72,7 @@
             <td><%= todo.description %></td>
             <td><%= todo.status %></td>
             <td><%= todo.estimatedDate %></td>
+            <td><%= todo.updated_at.strftime("%Y-%m-%d %H:%M") %></td>
             <td><%= link_to '詳細', todo %></td>
             <td><%= link_to '編集', edit_todo_path(todo) %></td>
             <td><%= link_to '削除', todo, method: :delete, data: { confirm: '削除してもよろしいですか？' } %></td>
